fix collapse problem

--- a/src/less/left-menu.less
+++ b/src/less/left-menu.less
@@ -3,6 +3,7 @@
   width: @left-menu-width;
   position:  absolute;
   left: 0;
+  display: none;
   height: calc(~"100vh" - @header-height);
   z-index: 3;
 
